# cub3d

./: .gitignore  CMakeLists.txt  Makefile
includes/: cub3d.h  ft_parser.h
scene_description/: config.cub
src/: cub3d.c
src/parser/: ft_parser.c
